--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:focusable="true"
     android:layout_width="match_parent"
@@ -18,6 +18,7 @@
         android:focusable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:controller_layout_id="@layout/exo_playback_control_view"
         android:layout_below="@id/btnChangeRepeatMode">
 
         <ProgressBar
@@ -28,5 +29,15 @@
             android:visibility="gone"/>
 
     </com.google.android.exoplayer2.ui.PlayerView>
+
+    <fragment
+        android:id="@+id/cast_mini_controller"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        app:castShowImageThumbnail="true"
+        android:layout_marginBottom="24dp"
+        class="com.google.android.gms.cast.framework.media.widget.MiniControllerFragment" />
 
 </RelativeLayout>
