--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/exo_controller"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -90,6 +90,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#CBCDC8" />
+
+        <androidx.mediarouter.app.MediaRouteButton
+            android:id="@+id/media_route_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
+            tools:icon="@drawable/mr_button_light"
+          />
 
         <ImageView
             android:id="@+id/bt_quality"
